add new files for new test dataset

--- a/jupyter/process-links.ipynb
+++ b/jupyter/process-links.ipynb
@@ -223,9 +223,75 @@
     "edge_table = apply_node_attributes(\n",
     "    dedupe_edges(edges),\n",
     "    node_dict=create_node_dict(data)\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_text(d):\n",
+    "    text = ''\n",
+    "    newline = '\\n'\n",
+    "    for k, v in d.items():\n",
+    "        t = k.replace('_', ' ').title()\n",
+    "        text += f'{t}: {v} {newline}'\n",
+    "    return text.rstrip(newline)\n",
     "\n",
-    "edge_table"
+    "def assign_group(d):\n",
+    "    if 'user_id' in d.keys():\n",
+    "        return 1\n",
+    "    if 'method' in d.keys():\n",
+    "        groups = {'credit_card': 2, 'transfer': 3, 'debit_card': 4}\n",
+    "        method = d.get('method')\n",
+    "        return groups.get(method, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_nodes_json_object(node_dict):\n",
+    "    arr = []\n",
+    "    for node_id, data in node_dict.items():\n",
+    "        rec = {\n",
+    "            'id': node_id,\n",
+    "            'text': create_text(data),\n",
+    "            'group': assign_group(data)\n",
+    "        }\n",
+    "        arr.append(rec)\n",
+    "    return arr\n",
+    "\n",
+    "def build_links_json_object(data):\n",
+    "    return dedupe_edges(build_edges(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes = build_nodes_json_object(create_node_dict(data))\n",
+    "links = build_links_json_object(data)\n",
+    "json_string = json.dumps({'nodes': nodes, 'links': links}, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_fname = 'ticketdata.json'\n",
+    "out_fpath = os.path.join(DATA_DIR, out_fname)\n",
+    "\n",
+    "with open(out_fpath, 'w') as f:\n",
+    "    f.write(json_string)"
    ]
   }
  ],
